--- a/home.html
+++ b/home.html
@@ -12,18 +12,13 @@
 
     <link rel="stylesheet" href="assets/styles/style.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/plugin/mCustomScrollbar/jquery.mCustomScrollbar.min.css">
-    <link rel="stylesheet" href="assets/plugin/waves/waves.min.css">
-    <link rel="stylesheet" href="assets/plugin/sweet-alert/sweetalert.css">
-
-    <link rel="stylesheet" href="assets/plugin/form-wizard/prettify.css">
 </head>
 
 <body>
 
     <div class="main-menu">
         <header class="header">
-            <a href="/inicio" class="logo"><i class="ico ti-book"></i><strong>Biblio</strong></a>
+            <a href="home.html" class="logo"><i class="ico ti-book"></i><strong>Biblio</strong></a>
             <button type="button" class="button-close fa fa-times js__menu_close"></button>
         </header>
 
@@ -33,19 +28,16 @@
                 <h5 class="title">Navegação</h5>
                 <ul class="menu js__accordion">
                     <li>
-                        <a class="waves-effect" href="#"><i class="menu-icon ti-user"></i><span>Autores</span></a>
+                        <a class="waves-effect" href="autores.html"><i class="menu-icon ti-user"></i><span>Autores</span></a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#"><i class="menu-icon ti-write"></i><span>Editoras</span></a>
+                        <a class="waves-effect" href="livros.html"><i class="menu-icon ti-layers-alt"></i><span>Livros</span></a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#"><i class="menu-icon ti-layers-alt"></i><span>Livros</span></a>
+                        <a class="waves-effect" href="estantes.html"><i class="menu-icon ti-map"></i><span>Estantes</span></a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#"><i class="menu-icon ti-map"></i><span>Estantes</span></a>
-                    </li>
-                    <li>
-                        <a class="waves-effect" href="#"><i class="menu-icon ti-map-alt"></i><span>Prateleira</span></a>
+                        <a class="waves-effect" href="prateleiras.html"><i class="menu-icon ti-map-alt"></i><span>Prateleira</span></a>
                     </li>
                 </ul>
             </div>
@@ -53,9 +45,6 @@
     </div>
 
     <div class="fixed-navbar">
-        <div class="pull-left">
-            <h1 class="page-title">Início</h1>
-        </div>
         <div class="pull-right">
             <div class="ico-item">
                 <i class="ti-user"></i>
@@ -73,7 +62,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-5 col-xs-5">
                     <div class="box-content">
                         <div class="statistics-box">
-                            <p class="text">Vendas R$</p>
+                            <p class="text">Livros</p>
                             <h2 class="counter">80k</h2>
                         </div>
                     </div>
@@ -81,8 +70,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-7 col-xs-7">
                     <div class="box-content">
                         <div class="statistics-box">
-                            <p class="text">Contas a Receber R$</p>
-                            <h2 class="counter">120k</h2>
+                            <p class="text">Usuários</p>
+                            <h2 class="counter">200</h2>
                         </div>
                     </div>
                 </div>
@@ -113,25 +102,7 @@
     <script src="assets/scripts/jquery.min.js"></script>
     <script src="assets/scripts/modernizr.min.js"></script>
     <script src="assets/plugin/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="assets/plugin/nprogress/nprogress.js"></script>
-    <script src="assets/plugin/sweet-alert/sweetalert.min.js"></script>
-    <script src="assets/plugin/waves/waves.min.js"></script>
-
-    <!-- Datepicker -->
-    <script src="assets/datepicker/datepicker.min.js"></script>
-    <script src="assets/datepicker/datepicker.pt-BR.js"></script>
-
-    <!-- Sparkline Chart -->
-    <script src="assets/plugin/chart/sparkline/jquery.sparkline.min.js"></script>
-    <script src="assets/scripts/chart.sparkline.init.min.js"></script>
-
-    <script src="assets/plugin/form-wizard/prettify.js"></script>
-    <script src="assets/plugin/form-wizard/jquery.bootstrap.wizard.min.js"></script>
-    <script src="assets/plugin/jquery-validation/jquery.validate.min.js"></script>
-    <script src="assets/scripts/form.wizard.init.min.js"></script>
-
-    <script src="assets/scripts/sweetalert.init.js"></script>
 
     <script src="assets/scripts/highcharts.js"></script>
 
