Add crud de usuário

--- a/prateleiras.html
+++ b/prateleiras.html
@@ -28,23 +28,23 @@
                     Usuário!</h5>
                 <h5 class="title">Navegação</h5>
                 <ul class="menu js__accordion">
-                    <li>
-                        <a class="waves-effect" href="autores.html"><i
-                                class="menu-icon ti-user"></i><span>Autores</span></a>
+                    <!-- <li>
+                        <a class="waves-effect" href="autores.html"><i class="menu-icon ti-user"></i><span>Autores</span></a>
                     </li>
                     <li>
                         <a class="waves-effect" href="clientes.html"><i class="menu-icon ti-user"></i><span>Clientes</span></a>
+                    </li> -->
+                    <li>
+                        <a class="waves-effect" href="livros.html"><i class="menu-icon ti-layers-alt"></i><span>Livros</span></a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="livros.html"><i
-                                class="menu-icon ti-layers-alt"></i><span>Livros</span></a>
+                        <a class="waves-effect" href="estantes.html"><i class="menu-icon ti-map"></i><span>Estantes</span></a>
                     </li>
-                    <li>
-                        <a class="waves-effect" href="estantes.html"><i
-                                class="menu-icon ti-map"></i><span>Estantes</span></a>
-                    </li>
-                    <li>
+                    <!-- <li>
                         <a class="waves-effect" href="prateleiras.html"><i class="menu-icon ti-map-alt"></i><span>Prateleiras</span></a>
+                    </li> -->
+                    <li>
+                        <a class="waves-effect" href="usuarios.html"><i class="menu-icon ti-user"></i><span>Usuários</span></a>
                     </li>
                 </ul>
             </div>
@@ -73,8 +73,7 @@
                                 <h4>Prateleiras</h4>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
-                                <button type="button" onclick="adicionar()"
-                                    class="btn btn-primary waves-effect waves-light">Adicionar</button>
+                                <button type="button" onclick="adicionar()" class="btn btn-primary waves-effect waves-light">Adicionar</button>
                             </div>
                         </div>
                         <div class="table-responsive" data-pattern="priority-columns">
