--- a/home.html
+++ b/home.html
@@ -27,17 +27,23 @@
                 <h5 class="title" style="background-color: #00962ed4; color: white; text-align: center;">Bem vindo Usuário!</h5>
                 <h5 class="title">Navegação</h5>
                 <ul class="menu js__accordion">
-                    <li>
+                    <!-- <li>
                         <a class="waves-effect" href="autores.html"><i class="menu-icon ti-user"></i><span>Autores</span></a>
                     </li>
+                    <li>
+                        <a class="waves-effect" href="clientes.html"><i class="menu-icon ti-user"></i><span>Clientes</span></a>
+                    </li> -->
                     <li>
                         <a class="waves-effect" href="livros.html"><i class="menu-icon ti-layers-alt"></i><span>Livros</span></a>
                     </li>
                     <li>
                         <a class="waves-effect" href="estantes.html"><i class="menu-icon ti-map"></i><span>Estantes</span></a>
                     </li>
+                    <!-- <li>
+                        <a class="waves-effect" href="prateleiras.html"><i class="menu-icon ti-map-alt"></i><span>Prateleiras</span></a>
+                    </li> -->
                     <li>
-                        <a class="waves-effect" href="prateleiras.html"><i class="menu-icon ti-map-alt"></i><span>Prateleira</span></a>
+                        <a class="waves-effect" href="usuarios.html"><i class="menu-icon ti-user"></i><span>Usuários</span></a>
                     </li>
                 </ul>
             </div>
